--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "selenium-cucumber-js",
+  "name": "itmayziii-selenium-cucumber-js",
   "version": "0.1.0",
   "description": "JavaScript browser automation framework using official selenium-webdriver and cucumber-js",
   "main": "index.js",
